apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'application'


repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url = "https://repo.akka.io/maven"
    }
}

def versions = [
        ScalaBinary   : "2.13",
        AkkaVersion   : "2.10.8",
        LogBackVersion: "1.5.13",
        JunitVersion  : "4.13.1"
]

dependencies {
    implementation "com.typesafe.akka:akka-bom_${versions.ScalaBinary}:${versions.AkkaVersion}"
    implementation "com.typesafe.akka:akka-actor-typed_${versions.ScalaBinary}:${versions.AkkaVersion}"
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    implementation "com.typesafe.akka:akka-actor-testkit-typed_${versions.ScalaBinary}:${versions.AkkaVersion}"
    testImplementation "junit:junit:${versions.JunitVersion}"
    implementation "ch.qos.logback:logback-classic:${versions.LogBackVersion}"
}

test {
    jvmArgs '--sun-misc-unsafe-memory-access=allow'
    useJUnit()
    testLogging {
        outputs.upToDateWhen { false }
        showStandardStreams = true
    }
}

java {
    sourceCompatibility = JavaVersion.VERSION_24
}

application {
    mainClass = "Main"
}

run {
    standardInput = System.in
}
